# gir-to-stub

./: Cargo.toml  README.md  parser.rs  todo.md
dump/: README.md  dump.lua
src/: derive.rs  lib.rs  library.rs  library2.rs  main.rs  parse.rs  parser.rs  vimdoc.rs
src/lang/: lua.rs  mod.rs  python.rs
src/output/: vimdoc.rs
testdata/girs/: GMime-3.0.gir
testdata/lua/output/: gir_to_vimdoc__lang__lua__test__gmime.snap
