[package]
name = "gir-to-vimdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.22"
clap = {version = "4.0.10", features = ["derive"]}
xmltree = "0.10.3"

[dev-dependencies]
insta = "1.26.0"
pretty_assertions = "1.3.0"
